--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,7 @@ button {
   background-color: white;
   padding: 10px 20px;
   cursor: pointer;
-  min-width: 80%;
+  width: calc(100% - 5vw);
 }
 
 .title {
