--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+:root {
+  --hover-brightness: 90%;
+  --active-brightness: 80%;
+}
+
 html {
   box-sizing: border-box;
   font-family: Roboto, system-ui, "Segoe UI", Helvetica, Arial, sans-serif,
@@ -78,10 +83,10 @@ button {
 }
 
 button:hover {
-  filter: brightness(90%);
+  filter: brightness(var(--hover-brightness));
 }
 button:active {
-  filter: brightness(80%);
+  filter: brightness(var(--active-brightness));
 }
 
 .delay-wrapper {
@@ -107,4 +112,26 @@ button:active {
 .button-wrapper {
   width: 100%;
   text-align: center;
+}
+
+.volume {
+  text-align: center;
+}
+
+.volume > img {
+  cursor: pointer;
+  width: 25%;
+  aspect-ratio: 1;
+  filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(36deg)
+    brightness(105%) contrast(101%);
+}
+
+.volume > img:hover {
+  filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(36deg)
+    brightness(90%) contrast(101%);
+}
+
+.volume > img:active {
+  filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(36deg)
+    brightness(80%) contrast(101%);
 }
