--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,7 @@ body {
   align-content: start;
   gap: 50px;
   justify-items: center;
+  position: relative;
 }
 
 button {
@@ -116,12 +117,15 @@ button:active {
 }
 
 .volume {
-  text-align: center;
+  text-align: right;
+  position: absolute;
+  right: 1vw;
+  bottom: 1vw;
 }
 
 .volume > img {
   cursor: pointer;
-  width: 25%;
+  width: 5vw;
   aspect-ratio: 1;
   filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(36deg)
     brightness(105%) contrast(101%);
