--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@ body {
   height: 100vh;
   aspect-ratio: 1;
   display: grid;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: minmax(0, 1fr);
   position: relative;
   user-select: none;
 }
@@ -45,7 +45,6 @@ body {
 }
 
 .square {
-  display: grid;
   background-color: rgb(240, 217, 181);
 }
 
@@ -105,10 +104,6 @@ button:active:not([disabled]) {
   padding: 5px 10px;
   margin-top: 25px;
   width: 50%;
-}
-
-.knight-icon {
-  height: 100%;
 }
 
 .visited {
